--- a/ex16e17/ex016/modelo.html
+++ b/ex16e17/ex016/modelo.html
@@ -4,20 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Vamos contar</h1>
     </header>
     
     <section>
         <div>
-            Testando...
+            <p>Inicio: 
+                <input type="number" name="inicio" id="inicio">
+            </p>
+            <p>Fim: 
+                <input type="number" name="fim" id="fim">
+            </p>
+            <p>Passo:
+                <input type="number" name="passo" id="passo">
+            </p>
+            <p>
+                <input type="button" value="Contar" onclick="contador()">
+            </p>
         </div>
-        <div>
-            Ola!
+        <div id="res">
+            Preparando contagem...
         </div>
     </section>
 
