--- a/ex16e17/ex016/modelo.html
+++ b/ex16e17/ex016/modelo.html
@@ -27,8 +27,13 @@
                 <input type="button" value="Contar" onclick="contador()">
             </p>
         </div>
-        <div id="res">
-            Preparando contagem...
+        <div>
+            <p id="restxt">
+                Preparando contagem...
+            </p>
+            <p id="res">
+
+            </p>
         </div>
     </section>
 
