--- a/ex16e17/ex017/modelo.html
+++ b/ex16e17/ex017/modelo.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercicio</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Titulo</h1>
+        <h1>Tabuada</h1>
     </header>
     
     <section>
         <div>
-            Testando...
+            Número: 
+            <input type="number" name="txtn" id="txtn"> 
+            <input type="button" value="GerarTabuada" onclick="tabuada()">
         </div>
         <div>
-            Ola!
+            <select name="res" id="res" size="10">
+                <option value="default">Digite um numero acima</option>
+            </select>
         </div>
     </section>
 
     <footer>
-        <p>&copy; CursoemVideo</p>
+        <p>@gabrieleugeni0</p>
     </footer>
     <script src="script.js"></script>
 </body>
