--- a/ex16e17/ex016/html.html
+++ b/ex16e17/ex016/html.html
@@ -25,7 +25,7 @@
     </section>
 
     <footer>
-        <p>&copy; CursoemVideo</p>
+        <p>@gabrieleugeni0</p>
     </footer>
     <script src="script.js"></script>
 </body>
